[project]
name = "netpipe"
version = "0.1.0"
description = "Send files between friends via AWS"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "requests>=2.31",
]

[project.scripts]
netpipe = "netpipe.main:cli"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"